remove extraneous database related code

--- a/app/content/posts/2018-01-22.toml
+++ b/app/content/posts/2018-01-22.toml
@@ -1,5 +1,5 @@
 date = "2018-01-22"
-tags = [ "recurse", "blood batteries", "talk"]
+tags = [ "recurse"]
 en = "I gave a 5 min presentation on my blood batteries.  It went well.  I didn't talk much about how the batteries are constructed and focused more on why I created them.  I talked about my race and identity and how that fed into the development of the batteries."
 kr = "피의 벳터리대해 5분 강연을 했다. 잘 됬다. 벳터리의 만드는 방법에 대해 얘기 안 하고 벳터리를 왜 만든지에 대해 얘기 했다. 나의 인종, 정체성을 벳터리에 통해 탐험한다는 얘기를 했다."
 images = [ ""]
