edit korean post for jan 10 2018

--- a/app/content/posts/2018-01-10.toml
+++ b/app/content/posts/2018-01-10.toml
@@ -5,7 +5,7 @@ Another good day at Recurse. Met with Pedro to discuss flask and did a pair prog
 """
 
 kr = """
-리컬스에서 또 종은 하루를 보냈다. 페드로를 만나 플라스크에 대하여 상의하였고 카매론과는 함께하는 프로그래밍 연습을 하였다. 그리고 파이어니어 워크스에서 베텃리 대해 강연해 줄것을 부탁받았다. 강연은 신체와 기술의 관계에 대한것인데 MVR ('무버') 시리즈의 하나다.
+리컬스에서 또 종은 하루를 보냈다. 페드로를 만나 플라스크에 대하여 상의하였고 카매론과는 함께하는 프로그래밍 연습을 하였다. 그리고 파이어니어 워크스에서 배터리 대해 강연해 줄것을 부탁받았다. 강연은 신체와 기술의 관계에 대한것인데 MVR ('무버') 시리즈의 하나다.
 """
 
 images = []
