update face title to |||

--- a/app/content/posts/2018-01-22.toml
+++ b/app/content/posts/2018-01-22.toml
@@ -1,5 +1,5 @@
 date = "2018-01-22"
-tags = [ "recurse"]
+tags = [ "recurse", "blood batteries"]
 en = "I gave a 5 min presentation on my blood batteries.  It went well.  I didn't talk much about how the batteries are constructed and focused more on why I created them.  I talked about my race and identity and how that fed into the development of the batteries."
 kr = "피의 배터리에대해 5분간 강연을 했다. 잘 됐다. 배터리를 만드는 방법에 대해 이야기한 것이 아니고 배터리를 왜 만드는지에 대해 이야기 했다. 나의 인종, 정체성을 이해하기위하여 배터리를 통해 탐험한다는 이야기를 했다."
 images = [ ""]
