--- a/app/content/series.toml
+++ b/app/content/series.toml
@@ -50,7 +50,7 @@ text = ""
 # FACE
 url = "face"
 thumbnail = "face/IMG_20180106_122156-light.jpg"
-title = "Untitled"
+title = "|||"
 year = "2018"
 materials = "Copper, zinc, blood, gelatin, water, red LED"
 images = [
