--- a/app/content/posts/2018-01-23.toml
+++ b/app/content/posts/2018-01-23.toml
@@ -1,5 +1,5 @@
 date = "2018-01-23"
-tags = [ "blood batteries"]
+tags = [ "teeth"]
 en = "I got up early today so I spent some time in the morning working on the teeth.  It was good to get that momentum going and I did more work in the evening.  The plastic is much harder to work with than I anticipated.  I think it'll look fine in the end, but it would be good to figure out how to 3D print the structure."
 kr = "오늘 일찍 일어났으니까 아침에 치아프로젝트에 대해 일 좀 했다.  아침 일찍부터 일을 시작했더니 밤에도 일하기가 더 쉬웠다.  프라스틱을 반죽하기는 생각했던 것보다 힘들다. 다 만든 후에는 보기좋을꺼 같지만, 나중에 3D 프린트로 어떻게 만들어질 것인지를 생각해 두는것이 좋은듯하다."
 images = [ ""]
